yaml/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
  annotations:
    description: "API service"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: brunodasilvadev/techchallenge-api
        ports:
        - containerPort: 8080
        - containerPort: 443
        volumeMounts:
        - name: certs
          mountPath: /https
          readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: aspnetapp-cert
          items:
          - key: aspnetapp.pfx
            path: aspnetapp.pfx
