yaml/techchallenge-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rabbitmq
spec:
  containers:
    - name: rabbitmq
      image: rabbitmq:3-management
      ports:
        - containerPort: 5672
        - containerPort: 15672
      livenessProbe:
        exec:
          command:
            - rabbitmq-diagnostics
            - -q
            - ping
        initialDelaySeconds: 30
        periodSeconds: 30
        timeoutSeconds: 30
        failureThreshold: 3
