yaml/techchallenge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: techchallenge-service
spec:
  selector:
    app: techchallenge
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
